[package]
name = "gundb"
version = "0.1.1"
edition = "2018"
repository = "https://github.com/mmalmi/gun-rs"
description = "Distributed graph database that syncs over websockets and multicast"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version =  "1.0", features = ["derive"] }
serde_json = "1.0.64"
rand = "^0.8"
clap = "2.33.3"
pretty_env_logger = "0.4.0"
futures = "0.3.17"
futures-channel = "0.3.17"
futures-util = "0.3.17"
tokio = { version = "1.16.1", features = ["full"] }
tokio-stream = "0.1.8"
async-trait = "0.1.51"
env_logger = "0.9.0"
log = "0.4.14"
tokio-tungstenite = { version = "0.16.0", features=["native-tls"]}
url = "2.2.2"
multicast-socket = "0.2.2"
sysinfo = "0.21.2"
actix = "0.12.0"
actix-web = { version = "4.0.0-beta.19", features = ["openssl"] }
actix-web-actors = "4.0.0-beta.10"
actix-files = "0.6.0-beta.13"
actix-http = "3.0.0-beta.18"
bytes = "1.1.0"
openssl = { version = "0.10", features = ["v110"] }
size_format = "1.0.2"
ctrlc = "3.2.1"
tokio-test = "0.4.2"