[package]
name = "gundb"
version = "0.1.1"
edition = "2018"
repository = "https://github.com/mmalmi/gun-rs"
description = "Distributed graph database that syncs over websockets and multicast"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version =  "1.0", features = ["derive"] }
serde_json = "1.0.64"
bincode = "1.3.3"
rand = "^0.8"
clap = "2.33.3"
pretty_env_logger = "0.4.0"
futures = "0.3.17"
futures-channel = "0.3.17"
futures-util = "0.3.17"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.8"
async-trait = "0.1.51"
env_logger = "0.9.0"
log = "0.4.14"
tokio-tungstenite = { version = "0.17.1", features=["native-tls"]}
url = "2.2.2"
multicast-socket = "0.2.2"
sysinfo = "0.23.5"
actix = "0.13.0"
actix-web = { version = "4.0.1", features = ["openssl"] }
actix-web-actors = "4.1.0"
actix-files = "0.6.0"
actix-http = "3.0.3"
bytes = "1.1.0"
openssl = { version = "0.10", features = ["v110"] }
size_format = "1.0.2"
ctrlc = "3.2.1"
tokio-test = "0.4.2"
sled = "0.34.7"
