[package]
name = "gundb"
version = "0.2.1"
edition = "2018"
repository = "https://github.com/mmalmi/gun-rs"
description = "Distributed graph database that syncs over websockets and multicast"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version =  "1.0", features = ["derive"] }
serde_json = "1.0.64"
bincode = "1.3.3"
rand = "^0.8"
clap = "2.33.3"
pretty_env_logger = "0.4.0"
futures = "0.3.17"
futures-channel = "0.3.17"
futures-util = "0.3.17"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.8"
async-trait = "0.1.51"
env_logger = "0.9.0"
log = "0.4.14"
tokio-tungstenite = { version = "0.17.1", features=["native-tls"]}
url = "2.2.2"
multicast-socket = "0.2.2"
sysinfo = "0.23.5"
bytes = "1.1.0"
tokio-native-tls = "0.3.0"
size_format = "1.0.2"
ctrlc = "3.2.1"
tokio-test = "0.4.2"
sled = "0.34.7"
java-utils = "0.1.0"
ring = "0.16.20"
jsonwebtoken = "8.1.0"
jsonwebkey = { version = "0.3.5", features=["jwt-convert"] }
base64 = "0.13.0"

[dev-dependencies]
criterion = { version = "0.3", features=["async_futures"] }

[[bench]]
name = "my_benchmark"
harness = false